--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        Test
-    </body>
-</html>
+<form method="get" action="/#">
+    <html>
+        <body>
+            Test
+        </body>
+    </html>
+</form>
